# psp-comic-reader

./: CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: main.yml
cmake/: psp-toolchain.cmake
src/: archive.cpp  archive.h  bookmarks.cpp  bookmarks.h  browser.cpp  browser.h  display.cpp  display.h  image.cpp  image.h  input.cpp  input.h  main.cpp  main.h  settings.cpp  settings.h  ui.cpp  ui.h
src/libs/miniz/: miniz.h
src/libs/stb/: stb_image.h
